added reset game and score

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ http://www.samkass.com/theories/RPSSL.html
 <div id="rules"></div>
 <div id="game"></div>
 <div id="result"></div>
+<div id="reset"></div>
 
 	<!-- Latest compiled and minified jquery -->
 	<!-- <script src="http://code.jquery.com/jquery-2.1.1.js"></script> -->
